# gnome-builder

./: configure.ac
libide/: Makefile.am
libide/template/: ide-file-template-provider.c  ide-file-template-provider.h  ide-file-template.c  ide-file-template.h
plugins/: Makefile.am
plugins/file-templates/: Makefile.am  configure.ac  file-templates.plugin
plugins/file-templates/file_templates/: __init__.py
plugins/file-templates/file_templates/resources/: new-gobject.c  new-gobject.h
